--- a/styles.css
+++ b/styles.css
@@ -4,12 +4,14 @@
 }
 
 html {
-  min-height: 100dvh;
-  min-width: 100dvw;
+  min-height: 100vh;
+  min-width: 100vw;
   background-color: #E7F1F1;
 }
 
 body {
+  min-height: 100vh;
+  min-width: 100vw;
   font-family: 'Poppins', sans-serif;
 }
 
@@ -17,12 +19,12 @@ main {
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-wrap: wrap;
+  flex-wrap: wrap
 }
 
 h1 {
   margin-top: 65px;
-  margin-bottom: 55px;
+  margin-bottom: 65px;
   text-align: center;
   font-size: 75px;
   font-weight: 800;
@@ -62,4 +64,21 @@ figcaption {
 
 .color-box5 {
   background-color: #A4C4CA;
+}
+
+.color-button {
+  width: 275px;
+  height: 50px;
+  background-color: #000000;
+  color: #ffffff;
+  font-size: 30px;
+  font-family: 'Poppins', sans-serif;
+  font-weight: 100;
+  border-radius: 0px 50px 0px 50px;
+}
+
+.color-button-container {
+  display: flex;
+  justify-content: center;
+  margin-top: 85px;
 }
