--- a/styles.css
+++ b/styles.css
@@ -19,51 +19,29 @@ main {
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-wrap: wrap
+  flex-wrap: wrap;
 }
 
 h1 {
-  margin-top: 65px;
-  margin-bottom: 65px;
+  margin-top: 85px;
+  margin-bottom: 75px;
   text-align: center;
-  font-size: 75px;
+  font-size: 85px;
   font-weight: 800;
 }
 
 figure {
-  width: 140px;
-  height: 140px;
+  width: 150px;
+  height: 150px;
   background-color: #ffffff;
   margin: 7px;
   border: 4px solid #000000;
 }
 
 figcaption {
-  font-size: 20px;
   text-align: center;
-  margin: 5px;
-  margin-top: 8px;
-  letter-spacing: 0.75px;
-}
-
-.color-box1 {
-  background-color: #EA9999;
-}
-
-.color-box2 {
-  background-color: #FACB9C;
-}
-
-.color-box3 {
-  background-color: #FFE59A;
-}
-
-.color-box4 {
-  background-color: #B6D7A8;
-}
-
-.color-box5 {
-  background-color: #A4C4CA;
+  letter-spacing: 1px;
+  margin-top: 5px;
 }
 
 .color-button {
@@ -80,5 +58,58 @@ figcaption {
 .color-button-container {
   display: flex;
   justify-content: center;
-  margin-top: 85px;
+  margin-top: 125px;
+}
+
+@media only screen and (max-width: 768px) {
+ main {
+    display: flex;
+  }
+  h1 {
+    font-size: 75px;
+    margin-top: 55px;
+    margin-bottom: 55px;
+  }
+  figure {
+    width: 125px;
+    height: 125px;
+    margin: 5px;
+    border: 2px solid #000000;
+  }
+  figcaption {
+    margin-top: 4px;
+    font-size: 20px;
+  }
+  .color-button {
+    width: 250px;
+    height: 40px;
+    font-size: 20px;
+    margin-top: 25px;
+  }
+}
+
+@media only screen and (max-width: 480px) {
+  main {
+    display: flex;
+  }
+  h1 {
+    font-size: 45px;
+    margin-top: 35px;
+    margin-bottom: 35px;
+  }
+  figure {
+    width: 100px;
+    height: 100px;
+    margin: 5px;
+    border: 2px solid #000000;
+  }
+  figcaption {
+    margin-top: 5px;
+    font-size: 18px;
+  }
+  .color-button {
+    width: 200px;
+    height: 40px;
+    font-size: 20px;
+  }
 }
