--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 html {
@@ -15,6 +16,17 @@ body {
   font-family: 'Poppins', sans-serif;
 }
 
+header {
+  text-align: center;
+  margin-top: 75px;
+  margin-bottom: 75px;
+}
+
+h1 {
+  font-size: 85px;
+  font-weight: 800;
+}
+
 main {
   display: flex;
   justify-content: center;
@@ -22,50 +34,45 @@ main {
   flex-wrap: wrap;
 }
 
-h1 {
-  margin-top: 85px;
-  margin-bottom: 75px;
+figcaption{
   text-align: center;
-  font-size: 85px;
-  font-weight: 800;
+  margin-top: 8px;
+  font-size: 20px;
 }
 
-figure {
+.color-box {
+  margin: 7px;
   position: relative;
   width: 150px;
   height: 150px;
-  background-color: #ffffff;
-  margin: 7px;
-  border: 4px solid #000000;
 }
 
-figcaption {
-  text-align: center;
-  letter-spacing: 1px;
-  margin-top: 5px;
+.color-box-figure {
+  width: 100%;
+  height: 100%;
+  background-color: #ffffff;
+  border: 4px solid #000000;
 }
 
 .lock-icon {
   position: absolute;
-  bottom: 5px;
-  right: 5px;
-  width: 40px;
-  height: 40px;
+  bottom: 10px;
+  right: 10px;
+  width: 30px;
+  height: 30px;
   background-size: contain;
   background-repeat: no-repeat;
+  cursor: pointer;
 }
 
-/* Lock Icons */
 .unlocked-icon {
   background-image: url('./assets/unlocked.png');
 }
 
 .locked-icon {
   background-image: url('./assets/locked.png');
-  display: none;
 }
 
-/* Color Button */
 .color-button {
   width: 275px;
   height: 50px;
@@ -74,9 +81,9 @@ figcaption {
   font-size: 30px;
   font-weight: 100;
   font-family: 'Poppins', sans-serif;
-  font-weight: 100;
   border-radius: 0px 50px 0px 50px;
   margin-top: 30px;
+  cursor: pointer;
 }
 
 .color-button-container {
@@ -85,25 +92,15 @@ figcaption {
   margin-top: 125px;
 }
 
-/* Media Queries */
 @media only screen and (max-width: 768px) {
- main {
-    display: flex;
-  }
   h1 {
     font-size: 75px;
     margin-top: 55px;
     margin-bottom: 55px;
   }
-  figure {
+  .color-box {
     width: 125px;
     height: 125px;
-    margin: 5px;
-    border: 2px solid #000000;
-  }
-  figcaption {
-    margin-top: 4px;
-    font-size: 20px;
   }
   .color-button {
     width: 250px;
@@ -114,23 +111,14 @@ figcaption {
 }
 
 @media only screen and (max-width: 480px) {
-  main {
-    display: flex;
-  }
   h1 {
     font-size: 45px;
     margin-top: 35px;
     margin-bottom: 35px;
   }
-  figure {
+  .color-box {
     width: 100px;
     height: 100px;
-    margin: 5px;
-    border: 2px solid #000000;
-  }
-  figcaption {
-    margin-top: 5px;
-    font-size: 18px;
   }
   .color-button {
     width: 200px;
