--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 html {
@@ -15,70 +16,160 @@ body {
   font-family: 'Poppins', sans-serif;
 }
 
+header {
+  text-align: center;
+  margin-top: 75px;
+  margin-bottom: 75px;
+}
+
+h1 {
+  margin-top: 150px;
+  margin-bottom: 100px;
+  text-align: center;
+  font-size: 85px;
+  font-weight: 800;
+  width: 70vw;
+}
+
+h2 {
+  text-align: center;
+}
+
 main {
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-wrap: wrap
+  flex-wrap: wrap;
+  width: 70vw;
 }
 
-h1 {
-  margin-top: 65px;
-  margin-bottom: 65px;
+figcaption{
   text-align: center;
-  font-size: 75px;
-  font-weight: 800;
-}
-
-figure {
-  width: 140px;
-  height: 140px;
-  background-color: #ffffff;
-  margin: 7px;
-  border: 4px solid #000000;
-}
-
-figcaption {
-  font-size: 20px;
-  text-align: center;
-  margin: 5px;
   margin-top: 8px;
-  letter-spacing: 0.75px;
+  font-size: 20px;
 }
 
-.color-box1 {
-  background-color: #EA9999;
+.saved-palettes-panel {
+  display: flex;
+  position: fixed;
+  right: 0;
+  top: 0;
+  width: 30vw;
+  height: 100vh;
+  overflow: auto;
+  padding: 15px;
+  background-color: #E7F1F1;
+  border-left: 5px solid #000000;
+
 }
 
-.color-box2 {
-  background-color: #FACB9C;
+.saved-palettes-text {
+  position: absolute;
+  top: 10px;
+  margin-top: 75px;
+  margin-bottom: 75px;
+  text-align: center;
+  right: 10px;
+  left: 10px;
+  font-family: 'Poppins', sans-serif;
+  font-size: 55px;
+  color: #000000;
 }
 
-.color-box3 {
-  background-color: #FFE59A;
+.color-box-figure  {
+  position: relative;
+  width: 160px;
+  height: 160px;
+  background-color: #ffffff;
+  margin: 10px;
+  border: 5px solid #000000;
 }
 
-.color-box4 {
-  background-color: #B6D7A8;
+nav {
+  list-style: none;
+  padding: 0;
+  margin: 0;
 }
 
-.color-box5 {
-  background-color: #A4C4CA;
+.mini-color-box {
+  width: 65px;
+  height: 65px;
+  background-color: #ffffff;
+  margin: 8px;
+  border: 5px solid #000000;
 }
 
-.color-button {
-  width: 275px;
-  height: 50px;
+.lock-icon {
+  position: absolute;
+  bottom: 10px;
+  right: 8px;
+  width: 40px;
+  height: 40px;
+  background-size: contain;
+  background-repeat: no-repeat;
+  cursor: pointer;
+}
+
+.unlocked-icon {
+  background-image: url('./assets/unlocked.png');
+}
+
+.locked-icon {
+  background-image: url('./assets/locked.png');
+}
+
+.save-button, .color-button {
+  width: 18vw;
+  height: 4vh;
   background-color: #000000;
   color: #ffffff;
-  font-size: 30px;
-  font-family: 'Poppins', sans-serif;
+  font-size: 35px;
   font-weight: 100;
+  font-family: 'Poppins', sans-serif;
+  font-weight: 200;
   border-radius: 0px 50px 0px 50px;
+  margin-top: 30px;
 }
 
 .color-button-container {
   display: flex;
   justify-content: center;
-  margin-top: 85px;
+  margin-top: 125px;
+  width: 70vw;
+  gap: 100px;
+}
+
+@media only screen and (max-width: 768px) {
+  h1 {
+    font-size: 75px;
+    margin-top: 55px;
+    margin-bottom: 55px;
+  }
+  .color-box {
+    width: 125px;
+    height: 125px;
+  }
+  .color-button {
+    width: 250px;
+    height: 40px;
+    font-size: 20px;
+    margin-top: 25px;
+  }
+}
+
+@media only screen and (max-width: 480px) {
+  h1 {
+    font-size: 45px;
+    margin-top: 35px;
+    margin-bottom: 35px;
+  }
+  .color-box {
+    width: 100px;
+    height: 100px;
+  }
+  .color-button {
+    width: 200px;
+    height: 40px;
+    font-size: 20px;
+  }
 }
