--- a/styles.css
+++ b/styles.css
@@ -49,30 +49,10 @@ figcaption{
   font-size: 20px;
 }
 
-.saved-palettes-panel {
-  display: flex;
-  position: fixed;
-  right: 0;
-  top: 0;
-  width: 30vw;
-  height: 100vh;
-  overflow: auto;
-  padding: 15px;
-  background-color: #E7F1F1;
-  border-left: 5px solid #000000;
-}
-
-.saved-palettes-text {
-  position: absolute;
-  top: 10px;
-  margin-top: 75px;
-  margin-bottom: 75px;
-  text-align: center;
-  right: 10px;
-  left: 10px;
-  font-family: 'Poppins', sans-serif;
-  font-size: 55px;
-  color: #000000;
+p {
+  padding-top: 250px;
+  margin-left: 125px;
+  margin-right: 125px;
 }
 
 .color-box-figure  {
@@ -81,20 +61,6 @@ figcaption{
   height: 160px;
   background-color: #ffffff;
   margin: 10px;
-  border: 5px solid #000000;
-}
-
-nav {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
-
-.mini-color-box {
-  width: 65px;
-  height: 65px;
-  background-color: #ffffff;
-  margin: 8px;
   border: 5px solid #000000;
 }
 
@@ -138,6 +104,58 @@ nav {
   gap: 100px;
 }
 
+.saved-palettes-panel {
+  display: flex;
+  flex-direction: column;
+  position: fixed;
+  right: 0;
+  top: 0;
+  width: 30vw;
+  height: 100vh;
+  overflow: auto;
+  padding: 15px;
+  background-color: #e7f1f1;
+  border-left: 5px solid #000000;
+}
+
+.saved-palettes-text {
+  margin-top: 10px;
+  font-family: 'Poppins', sans-serif;
+  font-size: 55px;
+  color: #000000;
+}
+
+.saved-palettes-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  margin-top: 30px;
+}
+
+.palette {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+  margin: 10px;
+}
+
+.palette .mini-color-box {
+  width: 65px;
+  height: 65px;
+  background-color: #ffffff;
+  margin: 8px;
+  border: 5px solid #000000;
+
+}
+
+
+.no-saved-palettes-msg {
+  display: none;
+}
+
+
+
 @media only screen and (max-width: 768px) {
   h1 {
     font-size: 75px;
@@ -167,8 +185,6 @@ nav {
     height: 100px;
   }
   .color-button {
-    width: 200px;
-    height: 40px;
-    font-size: 20px;
+    width:
   }
 }
