--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,7 @@ header {
 }
 
 h1 {
-  margin-top: 150px;
+  margin-top: 100px;
   margin-bottom: 100px;
   text-align: center;
   font-size: 85px;
@@ -50,9 +50,12 @@ figcaption{
 }
 
 p {
-  padding-top: 250px;
-  margin-left: 125px;
-  margin-right: 125px;
+  text-align:center;
+  align-self: center;
+}
+
+button {
+  outline: none;
 }
 
 .color-box-figure  {
@@ -85,21 +88,21 @@ p {
 
 .save-button, .color-button {
   width: 18vw;
-  height: 4vh;
+  height: 6vh;
   background-color: #000000;
   color: #ffffff;
-  font-size: 35px;
+  font-size: 25px;
   font-weight: 100;
   font-family: 'Poppins', sans-serif;
   font-weight: 200;
-  border-radius: 0px 50px 0px 50px;
-  margin-top: 30px;
+  border-radius: 0px 45px 0px 45px;
+  margin-top: 20px;
 }
 
 .color-button-container {
   display: flex;
   justify-content: center;
-  margin-top: 125px;
+  margin-top: 50px;
   width: 70vw;
   gap: 100px;
 }
@@ -119,9 +122,9 @@ p {
 }
 
 .saved-palettes-text {
-  margin-top: 10px;
+  margin-top: 30px;
   font-family: 'Poppins', sans-serif;
-  font-size: 55px;
+  font-size: 40px;
   color: #000000;
 }
 
@@ -141,50 +144,27 @@ p {
 }
 
 .palette .mini-color-box {
-  width: 65px;
-  height: 65px;
+  width: 55px;
+  height: 55px;
   background-color: #ffffff;
-  margin: 8px;
+  margin: 0.5px;
   border: 5px solid #000000;
 
 }
 
 
 .no-saved-palettes-msg {
-  display: none;
+  font-size: 24px;
+  font-style: italic;
 }
 
-
-
-@media only screen and (max-width: 768px) {
-  h1 {
-    font-size: 75px;
-    margin-top: 55px;
-    margin-bottom: 55px;
-  }
-  .color-box {
-    width: 125px;
-    height: 125px;
-  }
-  .color-button {
-    width: 250px;
-    height: 40px;
-    font-size: 20px;
-    margin-top: 25px;
-  }
-}
-
-@media only screen and (max-width: 480px) {
-  h1 {
-    font-size: 45px;
-    margin-top: 35px;
-    margin-bottom: 35px;
-  }
-  .color-box {
-    width: 100px;
-    height: 100px;
-  }
-  .color-button {
-    width:
-  }
+.delete-palette {
+  background-image: url('./assets/delete.png');
+  background-size: contain;
+  background-color: transparent;
+  width: 40px;
+  height: 40px;
+  cursor: pointer;
+  border: none;
+  outline: none;
 }
